Bug 1259303 - Properly cancel login manager async searches to avoid assertions. r=MattN